--- a/main.css
+++ b/main.css
@@ -3,18 +3,15 @@ min-height: 100%;
 display: flex;
 flex-direction: column;
 font-weight: 300;
-line-weidght: 1.5;
+line-weight: 1.5;
 }
 body{
-	background-image:"bcard-ref1.png"
-	background-position: center top;
-	background-size:cover;
 	font-family:'Lato', sans-serif;
 	margin:0;
 }
 .page-title{
 	text-align: center;
-	font-weight: 200;
+	font-weight:500;
 }
 
 .gallery{
@@ -69,7 +66,7 @@ body{
 
 
 .thumbnail{
-	width: 100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
